api2-salary/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salary-api
  namespace: sample-apis
  labels:
    app: salary-api
spec:
  selector:
    app: salary-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
